<resources>
    <string name="app_name">Calculator</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonZero">0</string>
    <string name="expression">""</string>
    <string name="result">""</string>
    <string name="textViewExpression">0</string>
    <string name="textViewResult">0</string>
    <string name="buttonEquals">=</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMult">*</string>
    <string name="buttonDiv">/</string>
    <string name="buttonBack">Back</string>
    <string name="buttonOpen">(</string>
    <string name="buttonClose">)</string>
    <string name="buttonClear">clear</string>
    <string name="buttonDot">.</string>
    <string name="parceException">String is not parcelable</string>

</resources>
